--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-slate
-title: Deep Method Naming
+title: Detecting Runtime Exceptions by Deep Code RepresentationLearning with Attention-Based Graph Neural Networks
 
 github:
   is_project_page: false
